@@ -40,6 +40,6 @@ clean-backupfiles:
 	rm -f *~
 
 .PHONY: default build domserver install-domserver judgehost install-judgehost \
-        docs submitclient check clean clean-backupfiles distclean
+        docs install-docs submitclient check clean clean-backupfiles distclean
 
 endif # GLOBALINCLUDED
