@@ -7,6 +7,9 @@ default: docs
 
 docs: judge-manual.pdf judge-manual.html
 
+install-docs: docs
+	cp -a -t $(domjudge_docdir) judge-manual.pdf judge-manual*.html
+
 judge-manual.pdf: judge-manual.sgml ../docs_header.tex
 	linuxdoc -B latex -o pdf -P "`cat ../docs_header.tex`" $< >/dev/null
 
@@ -16,4 +19,4 @@ judge-manual.html: judge-manual.sgml ../docs_header.html
 distclean:
 	-rm -f judge-manual*.html judge-manual.pdf
 
-.PHONY: docs
+.PHONY:
