@@ -1,0 +1,73 @@
+% Configuration file for LaTeX
+% $Id: config.template.tex 751 2005-05-21 13:44:43Z kink $
+
+%%% AUTOGENERATE HEADER START %%%
+%
+% This configuration file was automatically generated
+% with command './generate_config.sh tex'
+% on Sun Sep 14 17:34:46 CEST 2008 on host 'delta'.
+%
+% Do not edit this file by hand! Instead, edit parts of this
+% file which are outside the 'AUTOGENERATE HEADER' and
+% 'GLOBAL CONFIG INCLUDE' tags in the templates 'config.template.*'.
+%
+% Configuration options inside 'GLOBAL CONFIG INCLUDE' tags
+% should be edited in the main configuration file 'global.cfg'
+% and then be included here by running 'make config' in the root
+% of the system directory.
+%
+%%% AUTOGENERATE HEADER END %%%
+
+%%% GLOBAL CONFIG INCLUDE START %%%
+\def\DOMJUDGE_VERSION{3.0.0SVN}
+\def\ROOT_BASE{/home/domjudge}
+\def\SYSTEM_ROOT{/home/domjudge/system}
+\def\OUTPUT_ROOT{/home/domjudge/output}
+\def\INCOMINGDIR{/home/domjudge/output/incoming}
+\def\SUBMITDIR{/home/domjudge/output/sources}
+\def\JUDGEDIR{/home/domjudge/output/judging}
+\def\LOGDIR{/home/domjudge/output/log}
+\def\CHROOT_PREFIX{/home/domjudge/output/judging}
+\def\WEBSERVER{domjudge.example.com}
+\def\WEBBASEURI{http://domjudge.example.com/}
+\def\SUBMITSERVER{domjudge.example.com}
+\def\SUBMITPORT{9147}
+\def\DBSERVER{domjudge.example.com}
+\def\DBNAME{domjudge}
+\def\SCP_HOST{localhost}
+\def\RUNUSER{domjudge-run}
+\def\VALID_USERS{domjudge-run}
+\def\USE_CHROOT{1}
+\def\CHROOT_SCRIPT{}
+\def\COMPILETIME{30}
+\def\SOURCESIZE{256}
+\def\MEMLIMIT{524288}
+\def\FILELIMIT{4096}
+\def\PROCLIMIT{15}
+\def\ENABLE_CMDSUBMIT_SERVER{1}
+\def\ENABLE_WEBSUBMIT_SERVER{1}
+\def\SUBMITCLIENT_METHOD{1}
+\def\USERSUBMITDIR{.submit}
+\def\USERPERMFILE{0600}
+\def\USERPERMDIR{0700}
+\def\WARN_MTIME{5}
+\def\STRICTIPCHECK{0}
+\def\VERIFICATION_REQUIRED{0}
+\def\SHOW_COMPILE{2}
+\def\SHOW_AFFILIATIONS{1}
+\def\PENALTY_TIME{20}
+\def\LANG_EXTS{C,c C++,cpp,cc,c++ Java,java Pascal,pas,p Haskell,hs,lhs Perl,pl Bash,sh}
+\def\BEEP_CMD{/home/domjudge/system/bin/beep}
+\def\BEEP_ERROR{-l 1000 -d 500 -f 800 -n -l 1000 -d 500 -f 1000 -n -l 1000 -d 500 -f 800 -n -l 1000 -d 500 -f 1000 -n -l 1000 -d 500 -f 800 -n -l 1000 -d 500 -f 1000 -n -l 1000 -d 500 -f 800 -n -l 1000 -d 500 -f 1000 -n -l 1000 -d 500 -f 800 -n -l 1000 -d 500 -f 1000}
+\def\BEEP_WARNING{-l 1000 -d 500 -f 300 -n -l 1000 -d 500 -f 200 -n -l 1000 -d 500 -f 300 -n -l 1000 -d 500 -f 200}
+\def\BEEP_SUBMIT{-f 400 -l 100 -n -f 400 -l 70}
+\def\BEEP_ACCEPT{-f 400 -l 100 -n -f 500 -l 70}
+\def\BEEP_REJECT{-f 400 -l 100 -n -f 350 -l 70}
+\def\BALLOON_CMD{}
+\def\SYSLOG{LOG_LOCAL0}
+\def\DEBUG_PHP_NOTICE{1}
+\def\DEBUG_TIMINGS{2}
+\def\DEBUG_SQL{4}
+\def\DEBUG_JUDGE{8}
+\def\DEBUG{0}
+%%% GLOBAL CONFIG INCLUDE END %%%
